webtoon-kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    cloud.google.com/backend-config: '{"default": "my-bsc-backendconfig"}'
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
